--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "aos": "^2.3.4",
+    "es6": "^0.0.7",
     "firebase": "^9.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "vercel": "^23.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
